# supersort

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: fedora.yml  macos-12.yml  ubuntu.yml  windows.yml
doc/: super_sort.md
include/: super_sort.hpp
paper/: Pwhatevs.md
test/: CMakeLists.txt  test_super_sort.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
